--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,7 @@
       - confluence_jvm_max_mem              | mandatory
       - confluence_support_recommended_args | mandatory
       - confluence_servername               | mandatory
+      - confluence_service_enabled          in ['yes','no']
   tags: ['varcheck']
 
 - name: ensure docker is present
@@ -20,7 +21,7 @@
 - name: ensure docker is started and enabled
   systemd:
     name: docker
-    enabled: yes
+    enabled: '{{ confluence_service_enabled }}'
     state: started
 
 - name: create confluence data dir on docker host
@@ -40,7 +41,7 @@
     name: 'confluence'
     hostname: 'confluence'
     image: "{{ confluence_image_registry }}{{ confluence_image_registry | ternary('/','') }}{{ confluence_image_name }}:{{ confluence_version }}"
-    state: started
+    state: "{{ (confluence_service_enabled == 'yes') | ternary('started','stopped') }}"
     restart_policy: unless-stopped
     cacert_path: '/etc/pki/tls/certs/ca-bundle.crt'
     network_mode: host
