use new vars from atlassian description

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -52,8 +52,8 @@
       JVM_MINIMUM_MEMORY: '{{ confluence_jvm_min_mem }}'
       JVM_MAXIMUM_MEMORY: '{{ confluence_jvm_max_mem }}'
       JVM_SUPPORT_RECOMMENDED_ARGS: '{{ confluence_support_recommended_args }}'
-      CATALINA_CONNECTOR_PROXYNAME: '{{ confluence_revproxy_name }}'
-      CATALINA_CONNECTOR_PROXYPORT: '{{ confluence_revproxy_port }}'
-      CATALINA_CONNECTOR_SCHEME: '{{ confluence_revproxy_scheme }}'
-      CATALINA_CONNECTOR_SECURE: '{{ confluence_revproxy_secure }}'
-      CATALINA_CONTEXT_PATH: '{{ confluence_webappcontextpath }}'
+      ATL_PROXY_NAME: '{{ confluence_revproxy_name }}'
+      ATL_PROXY_PORT: '{{ confluence_revproxy_port }}'
+      ATL_TOMCAT_SCHEME: '{{ confluence_revproxy_scheme }}'
+      ATL_TOMCAT_SECURE: '{{ confluence_revproxy_secure }}'
+      ATL_TOMCAT_CONTEXTPATH: '{{ confluence_webappcontextpath }}'
