--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,7 @@ confluence_proxy_nonProxyHosts   : 'localhost\|127.0.0.1'
 
 confluence_tomcat_maxthreads     : '48'
 
-confluence_support_recommended_args: >
+confluence_support_recommended_args: |
   -Duser.timezone=Europe/Berlin
   -Duser.region=DE
   -Duser.country=DE
