--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
 - name: check required variables
   assert:
     that:
+      - confluence_image_name               | mandatory
       - confluence_data_dir                 | mandatory
       - confluence_version                  | mandatory
       - confluence_jvm_min_mem              | mandatory
@@ -12,6 +13,23 @@
       - confluence_servername               | mandatory
       - confluence_service_enabled          in ['yes','no']
   tags: ['varcheck']
+
+- name: show config environment
+  debug:
+    var: _environment
+  vars:
+    _environment:
+      confluence_servername: '{{ confluence_servername }}'
+      confluence_image_name: '{{ confluence_image_name }}'
+      confluence_version: '{{ confluence_version }}'
+      confluence_data_dir: '{{ confluence_data_dir }}'
+      confluence_jvm_min_mem: '{{ confluence_jvm_min_mem }}'
+      confluence_jvm_max_mem: '{{ confluence_jvm_max_mem }}'
+      confluence_support_recommended_args: '{{ confluence_support_recommended_args }}'
+      confluence_service_enabled: '{{ confluence_service_enabled }}'
+      confluence_image_registry: "{{ confluence_image_registry | default('not set') }}"
+      confluence_webappcontextpath: '{{ confluence_webappcontextpath }}'
+      
 
 - name: ensure docker is present
   package:
